# wasm-fluid

./: Cargo.toml  README.org  index.html  run.sh
.github/workflows/: deploy.yml
pkg/: package.json  wasm_fluid.d.ts  wasm_fluid.js  wasm_fluid_bg.wasm  wasm_fluid_bg.wasm.d.ts
src/: lib.rs
