[package]
name = "wasm-fluid"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Element",
    "DomRect",
    "WebGl2RenderingContext",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlUniformLocation",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "console"
] }

[profile.release]
opt-level = "z"  # smaller .wasm
